added login and signup handlers in js, and changed the handlebars accordingly

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -23,14 +23,14 @@
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your email for registeration</span>
-                <input type="text" placeholder="Name">
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Password">
+                <input type="text" placeholder="Username" id="username-signup">
+                <input type="email" placeholder="Email" id="email-signup">
+                <input type="password" placeholder="Password" id="password-signup">
                 <button>Sign Up</button>
             </form>
         </div>
         <div class="form-container sign-in">
-            <form>
+            <form class="login-form">
                 <h1>Sign In</h1>
                 <div class="social-icons">
                     <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
@@ -39,10 +39,10 @@
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
                 <span>or use email and password</span>
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Password">
+                <input type="email" placeholder="Email" id="email-login">
+                <input type="password" placeholder="Password" id="password-login">
                 <a href="#">Forget Your Password?</a>
-                <button>Sign In</button>
+                <button type="submit">Sign In</button>
             </form>
         </div>
         <div class="toggle-container">
@@ -50,12 +50,12 @@
                 <div class="toggle-panel toggle-left">
                     <h1>Welcome Back!</h1>
                     <p>Enter your information to use the site!</p>
-                    <button class="hidden" id="login">Sign In</button>
+                    <button type='submit' class="hidden" id="login">Sign In</button>
                 </div>
                 <div class="toggle-panel toggle-right">
                     <h1>Hello, Welcome!</h1>
                     <p>Register with your information to use the site!</p>
-                    <button class="hidden" id="register">Sign Up</button>
+                    <button type= 'submit' class="hidden" id="register">Sign Up</button>
 
                 </div>
             </div>
