--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="../public/assets/css/login.css">
+    <link rel="stylesheet" href="style.css">
     <title>Login</title>
 </head>
 
@@ -16,31 +15,22 @@
         <div class="form-container sign-up">
             <form>
                 <h1>Create Account</h1>
-                <div class="social-icons">
-                    <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
-                </div>
+              
                 <span>or use your email for registeration</span>
                 <input type="text" placeholder="Username" id="username-signup">
                 <input type="email" placeholder="Email" id="email-signup">
                 <input type="password" placeholder="Password" id="password-signup">
+                <span class="sign-up-toggle-icon"><i class="fas fa-eye"></i></span>
                 <button>Sign Up</button>
             </form>
         </div>
         <div class="form-container sign-in">
             <form class="login-form">
                 <h1>Sign In</h1>
-                <div class="social-icons">
-                    <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
-                </div>
                 <span>or use email and password</span>
                 <input type="email" placeholder="Email" id="email-login">
                 <input type="password" placeholder="Password" id="password-login">
+                <span class="password-toggle-icon"><i class="fas fa-eye"></i></span>
                 <a href="#">Forget Your Password?</a>
                 <button type="submit">Sign In</button>
             </form>
@@ -64,7 +54,7 @@
         </div>
     </div>
 
-    <script src="../public/assets/js/login.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
