--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../public/assets/css/login.css">
     <title>Login</title>
 </head>
 
@@ -54,7 +54,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="/assets/js/login.js"></script>
 </body>
 
 </html>
