--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -158,14 +158,14 @@ body {
     height: 100%;
     overflow: hidden;
     transition: all 0.5s ease-in-out;
-    border-radius: 100px 0 0 20px;
+    /* border-radius: 100px 0 0 20px; */
     z-index: 1000;
 }
 
 
 .container.active .toggle-container{
     transform: translateX(-100%);
-    border-radius: 0 100px 20px 0;
+    /* border-radius: 0 100px 20px 0; */
 
 }
 
