--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,3 +1,9 @@
- Main HTML structure
-
- ITS WORKING FOR NOW :D
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Indie Ignite</title>
+</head>
+<body>
+    {{{body}}}
+</body>
+</html>
