navbar, main, and style.css updated

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Indie Ignite</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <title>{{title}}</title>
 </head>
 <body>
-    {{{body}}}
+    {{> navbar}} 
+    {{{body}}}  
+    {{> footer}}  
 </body>
 </html>
