--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,1 +1,12 @@
-Nav bar template
+<nav class="navbar">
+    <div class="navbar-container">
+        <a href="/" class="navbar-brand">Indie Ignite</a>
+        <div class="navbar-links">
+            <a href="/">Home</a>
+            <a href="/login">Login</a>
+            <a href="/dashboard">Dashboard</a>
+            <a href="/profile">Profile</a>
+            <a href="/upload">Upload</a>
+        </div>
+    </div>
+</nav>
