Added handlebars footer with copyright

--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,1 +1,16 @@
-Footer template
+{{!-- Footer template --}}
+
+<footer class="footer-text-center p-0">
+    <div="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="footer-text-center">
+                    <p class="text-muted">©2024 Indie Ignite Created by: Spencer Klinkowize, Michael Freeman,
+                        Christopher Cuellar, Anthony
+                        Santon, and Nicole
+                        Greenspun, All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+        </div>
+</footer>
