--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,30 @@
-<div>
-    <h1>Welcome to Indie Ignite</h1>
-    <p>WE KILLIN IT LETS GO.</p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <title>Home</title>
+</head>
+
+<body>
+    {{navbar}}
+    <H1>Featured Games</H1>
+    <div class="slider">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+
+</body>
+
+</html>
