added email to footer

--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -7,8 +7,13 @@
                 <div class="footer-text-center">
                     <p class="text-muted">©2024 Indie Ignite Created by: Spencer Klinkowize, Michael Freeman,
                         Christopher Cuellar, Anthony
-                        Santon, and Nicole
+                        Santos, and Nicole
                         Greenspun, All rights reserved.</p>
+                    <div id="contact">
+                        <h2>Reach out via email with any questions and we will get back to you in 3-5 business days!
+                        </h2>
+                        email: <a href="mailto:indieignite2024@gmail.com">
+                    </div>
                 </div>
             </div>
         </div>
