--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-    {{navbar}}
     <H1>Featured Games</H1>
     <div class="slider">
         <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">{{> gametitle}} {{> upvotes}}</h5>
+               
             </div>
         </div>
     </div>
@@ -24,7 +24,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
-
 </body>
 
 </html>
