--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/assets/css/navbar.css">
 <nav class="navbar">
     <div class="navbar-container">
         <a href="/" class="navbar-brand">Indie Ignite</a>
