--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,19 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <link  href="/assets/css/home.css" rel="stylesheet">
     <title>Home</title>
 </head>
 
 <body>
+
     <H1>Featured Games</H1>
-    <div class="slider">
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg">
-            <div class="card-body">
-                <h5 class="card-title">{{> gametitle}} {{> upvotes}}</h5>
-               
-            </div>
-        </div>
+    <div class="container">
+
+            {{> gamecard}}
+
+        {{> gamecard}}
+        {{> gamecard}}
+        {{> gamecard}}
+        {{> gamecard}}
+        {{> gamecard}}
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
