--- a/views/partials/gameCard.handlebars
+++ b/views/partials/gameCard.handlebars
@@ -1,1 +1,9 @@
-Template for game cards
+ <div class="gamecard">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg">
+            <div class="card-body">
+                <h5 class="card-title">{{> gametitle}} {{> upvotes}}</h5>
+               
+            </div>
+        </div>
+    </div>
