--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,18 +1,14 @@
-{{!-- Footer template --}}
-
-<footer class="footer-text-center p-0">
-    <div="container">
-        <div class="row">
-            <div class="col-md-12">
+<footer class="footer">
+    <div="footer-container">
                 <div class="footer-text-center">
                     <p class="text-muted">©2024 Indie Ignite Created by: Spencer Klinkowize, Michael Freeman,
                         Christopher Cuellar, Anthony
                         Santos, and Nicole
                         Greenspun, All rights reserved.</p>
-                    <div id="contact">
+                    <div class="contact">
                         <h2>Reach out via email with any questions and we will get back to you in 3-5 business days!
                         </h2>
-                        email: <a href="mailto:indieignite2024@gmail.com">
+                        Email: <a href="mailto:indieignite2024@gmail.com">indieignite2024@gmail.com</a>
                     </div>
                 </div>
             </div>
