--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -1,24 +1,17 @@
 .footer {
-  position: fixed;
-  -ms-grid-row-align: center;
-  left: 0;
-  bottom: 0;
-  width: 100%;
+  /* position: fixed; */
   background-color: #333;
   color: white;
+  padding: 10px 20px; 
+ 
+  bottom: 0; 
+  left: 0;
+  width: 100%; 
+  box-shadow: 0 2px 10px rgba(0,0,0,0.5);
   text-align: center;
+  z-index: 100;
 }
 
-.footer-container {
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
+body {
+  margin-bottom: 50px; 
 }
-
-.footer-contact {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px;
-}
-
