--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,26 +6,130 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <link  href="/assets/css/home.css" rel="stylesheet">
+    <link href="/assets/css/home.css" rel="stylesheet">
     <title>Home</title>
 </head>
 
 <body>
 
-    <H1>Featured Games</H1>
-    <div class="container">
-        
-            {{> gamecard}}
-        {{> gamecard}}
-        {{> gamecard}}
-        {{> gamecard}}
-        {{> gamecard}}
-        {{> gamecard}}
-    </div>
 
+
+    {{!-- <aside class="sidebar">
+        <div class="sideContainer">
+            <input type="text" placeholder="Search..." name="search" id="searchBox">
+        </div>
+
+    </aside> --}}
+
+    <div class="giantContainer">
+        <div class="largeContainer">
+            <input type="text" placeholder="Search..." name="search" id="searchBox">
+            <H1>Featured Games</H1>
+
+
+            <button class="slide prev"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
+</svg></i></button>
+            <div class="container">
+
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+
+            </div>
+            <button class="slide next"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
+</svg></button>
+        </div>
+        <div class="largeContainer">
+            <h1>Trending Games</h1>
+            <button class="slide prev"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
+</svg></button>
+            <div class="container">
+
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+
+
+            </div>
+            <button class="slide next"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
+</svg></button>
+        </div>
+        <div class="largeContainer">
+            <h1>New Games</h1>
+            <button class="slide prev"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
+</svg></button>
+            <div class="container">
+
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+
+
+            </div>
+            <button class="slide next"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
+</svg></button>
+        </div>
+        <div class="largeContainer">
+            <h1>Soon To Release Games</h1>
+            <button class="slide prev"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
+</svg></button>
+            <div class="container">
+
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+                {{> gamecard}}
+
+
+            </div>
+            <button class="slide next"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
+</svg></button>
+        </div>
+
+    </div>
+  
+    <script src="/assets/js/home.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+
 </body>
+
 
 </html>
