--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/footer.css">
+   
+   
     <title>{{title}}</title>
 </head>
 <body>
     {{> navbar}} 
     {{{body}}}  
-    {{> footer}}  
+       <footer>
+{{> footer}} 
+    </footer>
 </body>
+
+  
 </html>
