--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,3 +1,4 @@
+ <link rel="stylesheet" href="/assets/css/footer.css">
 <footer class="footer">
     <div="footer-container">
                 <div class="footer-text-center">
