--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -1,41 +1,116 @@
 .profile-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 20px;
+    height: calc(100vh - 40px);
+}
+
+.left-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+        justify-content: flex-start; 
+        width: 48%;
+        padding: 20px;
+    }
+
+.right-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 48%;
 }
 
 .profile-header {
+    width: 100%; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; 
+    margin-bottom: 20px; 
+}
+
+.profile-image {
+    width: 340px;
+    height: 340px;
     display: flex;
     align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    border-radius: 50%;
+    background-color: #fff;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
 }
 
 .profile-image img {
-    width: 100px;
-    height: 100px;
+    width: 320px;
+    height: 320px;
     border-radius: 50%;
+    object-fit: cover; 
 }
 
-.profile-info h1, .profile-info p {
-    margin-left: 20px;
-}
-
-.profile-creations {
-    width: 40%;
+body {
+    background-image: linear-gradient(rgba(131, 88, 248, 0.5), rgba(30, 0, 128, 0.5)), url(../images/gamepage.jpeg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+    margin: 0;
+    justify-content: center;
 }
 
 .upload-form {
-    margin-top: 20px;
-    padding: 20px;
-    background: #f0f0f0;
-    border-radius: 8px;
+    width: 80%;
+    padding: 10px;
+    background: rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+
 }
 
 .upload-form label {
-    display: block;
-    margin-bottom: 10px;
+    display: none;
 }
 
 .upload-form input[type="file"] {
-    margin-bottom: 10px;
+    width: 100%;
+    cursor: pointer;
 }
 
+.upload-form button {
+    display: block;
+    width: 100%;
+    margin-top: 10px;
+    padding: 8px 0;
+    background-color: #6441A5;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.right-container {
+    width: 48%;
+    padding: 20px;
+}
+
+.creations-container {
+    width: 100%;
+    overflow-y: auto;
+}
+
+.creation-item {
+    margin: 10px 0;
+    text-align: center;
+}
+
+a {
+    color: #FFFFFF;
+    text-decoration: none;
+    font-size: 18px;
+}
