--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,26 +1,28 @@
 <link rel="stylesheet" href="/assets/css/profile.css">
 
 <div class="profile-container">
-    <div class="profile-header">
-        <div class="profile-image">
-            <img src="{{profileImageUrl}}" alt="Profile Image of {{userName}}">
+    <div class="left-container">
+        <div class="profile-header">
+            <div class="profile-image">
+                <img src="{{profileImageUrl}}" alt="Profile Image of {{userName}}">
+            </div>
+            <div class="profile-info">
+                <h1>{{userName}}</h1>
+                <p>{{userDescription}}</p>
+            </div>
         </div>
-        <div class="profile-info">
-            <h1>{{userName}}</h1>
-            <p>{{userDescription}}</p>
-        </div>
+        <form action="/api/profile/upload-photo" method="POST" enctype="multipart/form-data" class="upload-form">
+            <label for="profileImage">Upload Profile Image:</label>
+            <input type="file" id="profileImage" name="profileImage" accept="image/*">
+            <button type="submit">Upload Image</button>
+        </form>
     </div>
-<form action="/profile/upload-photo" method="POST" enctype="multipart/form-data" class="upload-form">
-    <label for="profileImage">Upload Profile Image:</label>
-    <input type="file" id="profileImage" name="profileImage" accept="image/*">
-    <button type="submit">Upload Image</button>
-</form>
-    <div class="profile-creations">
+    <div class="right-container">
         <h2>Creations</h2>
-        <ul>
-            {{#each creations}}
-            <li><a href="/game/{{this.id}}">{{this.title}}</a></li>
-            {{/each}}
-        </ul>
+        {{#each creations}}
+        <div class="creation-item">
+            <a href="/game/{{this.id}}">{{this.title}}</a>
+        </div>
+        {{/each}}
     </div>
 </div>
