created functionality for buttons on the homepage and game page, as well as adding the game page html and css

--- a/views/gamePage.handlebars
+++ b/views/gamePage.handlebars
@@ -40,6 +40,7 @@
                     src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg"
                     alt="">
             </div>
+              <button class="slide prev"><i class="icon">prev</i></button>
             <div class="smallImageContainer">
                 <img class="smallImage"
                     src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg"
@@ -73,6 +74,7 @@
                     alt="">
 
             </div>
+            <button class="slide next"> <i class="icon">next</i></button>
         </div>
         <aside class="sidebarRight">
 
@@ -121,7 +123,7 @@
 
     </div>
 
-
+        <script src="/assets/js/game.js"></script>
 </body>
 
 </html>
