fixed server issues and began working on client side javascript

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,7 +13,7 @@
 
     <div class="container" id="container">
         <div class="form-container sign-up">
-            <form>
+            <form class="signup-form">
                 <h1>Create Account</h1>
                 
                 <span>or use your email for registeration</span>
