--- a/views/gamePage.handlebars
+++ b/views/gamePage.handlebars
@@ -35,12 +35,12 @@
             <h1 class="gameTitle">GAME TITLE HERE</h1>
 
             <div class="featuredImageContainer">
-                
+
                 <img class="featuredImage"
                     src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg"
                     alt="">
             </div>
-              <button class="slide prev"><i class="icon">prev</i></button>
+            <button class="slide prev"><i class="icon">prev</i></button>
             <div class="smallImageContainer">
                 <img class="smallImage"
                     src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg"
@@ -75,6 +75,16 @@
 
             </div>
             <button class="slide next"> <i class="icon">next</i></button>
+
+        <div class="descriptionContainer">
+            <h2> "TITLE PARTIAL" Description</h2>
+            <p> "description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here description partial here</p>
+                <h3>Other Game Info</h3>
+                <p>Other Game info goes here</p>
+                <h3>Minumum Specs Required</h3>
+                <p>specs goes here</p>
+        </div>
+
         </div>
         <aside class="sidebarRight">
 
@@ -110,20 +120,18 @@
 
 
     </div>
-
-    <div class="reviewContainer">
-        <h2>Leave Review</h2>
-        <input class="reviewBox" type="text" placeholder="lorem ipsum ">
-        <h2>Leave Review</h2>
-        <input class="reviewBox" type="text" placeholder="lorem ipsum ">
+    <div class="bottomContainer">
 
 
+       
 
-
-
+        <div class="reviewContainer">
+            <h2>Leave Review</h2>
+            <input class="reviewBox" type="text" placeholder="lorem ipsum ">
+        </div>
     </div>
 
-        <script src="/assets/js/game.js"></script>
+    <script src="/assets/js/game.js"></script>
 </body>
 
 </html>
