--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -28,6 +28,7 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
       </li>
+    
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
@@ -39,8 +40,8 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+       <li class="nav-item">
+        <a class="nav-link" href="#">Logout</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -49,3 +50,5 @@
     </form>
   </div>
 </nav>
+
+<script src = "/assets/js/logout.js"></script>
