--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -1,4 +1,4 @@
-/* .navbar {
+.navbar {
     background-color: #333;
     color: white;
     padding: 10px 20px;
@@ -30,6 +30,6 @@
 
 .navbar-links a:hover {
     text-decoration: underline;
-} */
+} 
 
 
