--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -32,17 +32,9 @@
             <button class="slide prev"><i class="icon">prev</i></button>
             <div class="container">
 
-                {{> gamecard}}
-                {{> gamecard}}
-                {{> gamecard}}
-                {{> gamecard}}
-                {{> gamecard}}
-                {{> gamecard}}
-                {{> gamecard}}
-                {{> gamecard}}
-                {{> gamecard}}
-                {{> gamecard}}
-                {{> gamecard}}
+               {{#each games}}
+                {{> gamecard this}}
+               {{/each}}
 
             </div>
              <button class="slide next"> <i class="icon">next</i></button>
