--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -16,7 +16,7 @@
         <p>{{userDescription}}</p>
     </div>
     <div class="right-column">
-        <h2>Creations</h2>
+        <h2>ballz</h2>
         {{#each creations}}
             <div class="creation-item">
                 <a href="/game/{{this.id}}">{{this.title}}</a>
