--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -16,7 +16,7 @@
             <form class="signup-form">
                 <h1>Create Account</h1>
                 
-                <span>or use your email for registeration</span>
+                <span> Use your email for registeration</span>
                 <input type="text" placeholder="Username" id="username-signup">
                 <input type="email" placeholder="Email" id="email-signup">
                 <input type="password" placeholder="Password" id="password-signup">
